--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<canvas class="connecting-dots", width="986" height="679" style="display: block;"></canvas>
 			<div class="text-overlay">
 				<h1>Hello, I'm Leena.</h1>
-    			<h2>I'm a Software Engineer passionate about creating real-world applications.</h2>
+    			<h2>I'm a recent computer science graduate passionate about creating real-world applications.</h2>
 				<a href="#projects" class="view-work-button">
 					View My Work
 					<span class="arrow-down">&#8595;</span>
