--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<canvas class="connecting-dots", width="986" height="679" style="display: block;"></canvas>
 			<div class="text-overlay">
 				<h1>Hello, I'm Leena.</h1>
-    			<h2>I'm a recent computer science graduate passionate about creating real-world applications.</h2>
+    			<h2>I'm a recent computer science graduate passionate about machine learning.</h2>
 				<a href="#projects" class="view-work-button">
 					View My Work
 					<span class="arrow-down">&#8595;</span>
@@ -39,7 +39,7 @@
 
     <section id="about" class="section">
 		<h2>About Me</h2>
-		<p>I have recently graduated from the University of California, San Diego studying Machine Learning and Computer Science. My passion for coding comes down to making algorithms faster and building cool web applications and games. I mostly code in Java as it is my strongest language, Python, JavaScript, and C++. Furthermore, I am very interested in using automation to make cars safer to drive.</p>
+		<p>I have recently graduated from the University of California, San Diego studying Machine Learning and Computer Science.</p>
 		<div id="resume-container">
 			<a href="https://docs.google.com/document/d/e/2PACX-1vQ--vjM9DRazPmy7JLPJttwjoI7fBafYlyS-q4u4ZTmDvRU7XqCMbZFjvR_zHXkWA/pub" target="_blank" class="resume-button">Resume</a>
 		</div>
